@@ -41,6 +41,8 @@ Avro 1.5.0 (unreleased)
     AVRO-698. Java: Add MapReduce tests and documentation for jobs
     that mix Avro and non-Avro data. (cutting)
 
+    AVRO-692. Java: Permit Avro 1.2 format files to be read. (cutting)
+
   BUG FIXES
 
     AVRO-675. C: Bytes and fixed setters don't update datum size.
